# semantic-diff

./: .gitignore  Cargo.toml  README.md
crates/semantic-diff-cli/: Cargo.toml
crates/semantic-diff-cli/src/: cli.rs  main.rs
crates/semantic-diff-cli/tests/: cli_integration_test.rs
crates/semantic-diff-core/: Cargo.toml
crates/semantic-diff-core/benches/: large_codebase_benchmarks.rs  performance_benchmarks.rs
crates/semantic-diff-core/src/: analyzer.rs  error.rs  extractor.rs  formatter.rs  generator.rs  git.rs  lib.rs  performance.rs
crates/semantic-diff-core/src/formatter/: tests.rs
crates/semantic-diff-core/src/generator/: tests.rs
crates/semantic-diff-core/src/parser/: common.rs  go.rs  mod.rs
crates/semantic-diff-core/tests/: integration_basic_context_test.rs  integration_end_to_end_test.rs  integration_go_module_test.rs  integration_performance_test.rs  integration_semantic_context_test.rs
crates/semantic-diff-core/tests/test_data/: mod.rs
docs/: ARCHITECTURE.md  EXTENDING.md  TESTING.md
