[workspace]
members = ["crates/semantic-diff-cli", "crates/semantic-diff-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["semantic-diff contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/m4n5ter/semantic-diff"

[workspace.dependencies]
# Tree-sitter 核心库
tree-sitter = "0.25"
tree-sitter-go = "0.23"

# Git 操作
gix = "0.73"

# 错误处理
thiserror = "2.0"

# 日志记录
tracing = "0.1"
tracing-subscriber = "0.3"

# 并发处理
rayon = "1.10"

# 序列化
serde = "1.0"

# 命令行接口
clap = "4.5"

# 文件系统操作
walkdir = "2.5"

# 测试工具
tempfile = "3.20"
criterion = "0.6"
pretty_assertions = "1.4"
