[package]
name = "semantic-diff-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for semantic code diff analysis"

[dependencies]
# Tree-sitter 核心库
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }

# Git 操作
gix = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 日志记录
tracing = { workspace = true }

# 并发处理
rayon = { workspace = true }

# 序列化
serde = { workspace = true, features = ["derive"] }

# 文件系统操作
walkdir = { workspace = true }

# 正则表达式
regex = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 文本差异算法
imara-diff = { workspace = true }

# 系统信息
num_cpus = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "performance_benchmarks"
harness = false
